scss/partials/_navbar.scss
.navbar-inverse .navbar-nav>li>a{
  padding: 5px;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
 .navbar-fixed-top {
    border: 0;
}

@media (min-width: 960px) {
  nav.navbar {
    width: auto;
  }
  nav.navbar > div {
    width: auto;
    padding-left: 85px;
    padding-right: 85px;
  }
}

@media (max-width: 960px) {
  nav.navbar {
    width: auto;

    div#navbar {
      width: auto;
      padding-right: 230px;
    }
  }
}

nav.navbar {
  background-color: white;
  border-bottom: 1px solid rgba(0, 0, 0, 0.6);

  div.navbar-header {
    width: 100%;
  }

  button.share-button{
    margin-top: 4px;
    img {
      // width: 20px;
      height: 30px;
    }

    &:hover, &:active, &:focus {
      outline: none;
    }
  }

  button.digest-button{
    margin-top: 4px;
    img {
      // width: 20px;
      height: 20px;
    }

    &:hover, &:active, &:focus {
      outline: none;
    }
  }

  ul.navbar-right {
    float: right;
    margin-right: 50px;
  }
}

nav.tab-navigation {
  margin-top: 10px;
}

