fix right buttons position on small screens

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -68,6 +68,12 @@ nav.navbar {
     float: right;
     margin-right: 50px;
   }
+
+  @media screen and (max-width: 960px){
+    ul.navbar-right{
+      margin-right: -30px;
+    }
+  }
 }
 
 nav.tab-navigation {
